# sample-uv-app

./: main.py  pyproject.toml  sbom.cdx.json
tests/: test_agent.py
